estilizando pagina leticia.html

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <li><a href="#sistemas">
                 <iconify-icon icon="tabler:plant"></iconify-icon>
                  Sistemas</a></li>
+                 <li><a href="leticia.html"><iconify-icon icon="mdi:user"></iconify-icon>Letícia</a></li>
         </ul>
     </div>
     <div class="coluna coluna-direita">
