--- a/leticia.html
+++ b/leticia.html
@@ -3,9 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="estilo.css">
   <title>Página de Letícia</title>
 </head>
 <body>
-  <h1>Letícia</h1>
+  <aside class="menu coluna">
+    <img src="img/logo_hidroponia.svg" alt="Logo do Sistema de Hidroponia" width="150px"/>
+    <h1>Menu</h1>
+    <a href="index.html">Voltar</a>
+  </aside>
+  <main class="conteudo coluna">
+    <h1>Coluna Direita</h1>
+  </main>
 </body>
 </html>
